new - adicionado novo campo no form

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="col-md-4">
                 <div class="card-news">
                     <div class="card-body">
-                        <form name="newsLateral" action="POST" data-netlify="true">
+                        <form name="newsHome" action="POST" data-netlify="true">
                             <input name="nome" class="w-100" type="text" placeholder="Nome" required>
                             <input name="sobrenome" class="w-100" type="text" placeholder="Sobrenome" required>
                             <input name="email" class="w-100" type="email" placeholder="E-mail" required>
