new - popup novo

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="https://my.hellobar.com/450c8ecdeec6e1f5281b3c9b54a2a9029770e995.js" type="text/javascript" charset="utf-8" async="async"></script>
     <script>
         function downloadMaterial() {
             if (newsLateral.nome.value == "" || newsLateral.email.value == "" || newsLateral.sobrenome.value == "") {
