new - post zuriel

--- a/index.html
+++ b/index.html
@@ -106,6 +106,21 @@
                         </a>        
                     </div>  
                 </div>
+                <div class="row">
+                    <div class="col-md-6 mt-4">
+                        <a href="credito-estudantil-privado-entenda.html" class="link-card">
+                            <div class="card">
+                                <img class="card-img" src="img/Credito Estudantil.jpg" alt="Tumblr noticias">
+                                <div class="card-body">
+                                    <h5 class="card-title font-weight-bold">Crédito Estudantil Privado: entenda o que é</h5>
+                                    <p class="card-text">Para que você não fique adiando o sonho de ter um curso superior, ou até mesmo aquela pós graduação dos sonhos, existe o crédito estudantil, por meio do qual parte dos custos ou até mesmo o valor total do curso é financiado por uma instituição financeira...</p>
+                                    <span class="font-weight-bold">Zuriel Palma</span>
+                                    <a href="credito-estudantil-privado-entenda.html" class="more-news">mais</a>
+                                </div>
+                            </div>
+                        </a> 
+                    </div>
+                </div>
             </div>
             <div class="col-md-4">
                 <div class="card-news">
